--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -414,7 +414,7 @@
       margin: 0 0 20px
     &__button
       font-size: 10px
-@media screen and ( min-width: 992px )
+@media screen and ( min-width: 945px )
   .header
     &__link
       position: relative
